# Wolverine-Engine

./: .gitignore  CMakeLists.txt  ComponentManager.cpp  Databases.cpp  LICENSE  README.md  wolverine_engine.sln  wolverine_engine.vcxproj  wolverine_engine.vcxproj.filters
docs/: AudioManager_8cpp_source.html  AudioManager_8h_source.html  CNAME  ComponentDB_8h_source.html  ComponentManager_8cpp_source.html  EngineUtils_8h_source.html  Engine_8cpp_source.html  Engine_8h_source.html  InputManager_8cpp_source.html  KeycodeDB_8h_source.html  LuaAPI_8cpp_source.html  ParticleSystem_8cpp_source.html  RenderRequests_8h_source.html  SceneManager_8h_source.html  SpriteRenderer_8h_source.html  TextDB_8h_source.html  classAudioManager-members.html  classAudioManager.html  classCollision.html  classEngineUtils-members.html  classOnEnter.html  classParticleSystem-members.html  classParticleSystem__coll__graph.dot  classPhysicsWorld-members.html  classPhysicsWorld__coll__graph.dot  classRendererData.html  classRigidbody-members.html  classScene.html  classSpriteRenderer.html  classSpriteRenderer__coll__graph.dot  functions_func.html  hierarchy.html  inherit_graph_1.dot  inherit_graph_16.dot  inherit_graph_19.dot  inherit_graph_21.dot  inherit_graph_22.dot  inherit_graph_23.dot  inherit_graph_25.dot  inherit_graph_3.dot  (+9 more)
docs/config/: dconfig
docs/html/: ActorManager_8cpp_source.html  ActorManager_8h_source.html  AudioDB_8h_source.html  CollisionDetector_8cpp_source.html  CollisionDetector_8h_source.html  Collision_8h_source.html  ComponentManager_8h_source.html  Databases_8cpp_source.html  FileUtils_8h_source.html  ImageDB_8h_source.html  InputManager_8h_source.html  LuaAPI_8h_source.html  ParticleSystem_8h_source.html  PhysicsWorld_8h_source.html  Renderer_8cpp_source.html  Renderer_8h_source.html  Rigidbody_8cpp_source.html  Rigidbody_8h_source.html  SceneDB_8h_source.html  SceneManager_8cpp_source.html  SpriteRenderer_8cpp_source.html  TemplateDB_8h_source.html  annotated.html  classActor-members.html  classActor.html  classActors-members.html  classActors.html  classCollision-members.html  classCollisionDetector-members.html  classCollisionDetector.html  classCollisionDetector__coll__graph.dot  classComponentManager-members.html  classComponentManager.html  classDebugDraw-members.html  classDebugDraw.html  classDebugDraw__coll__graph.dot  classEngineUtils.html  classFileUtils-members.html  classFileUtils.html  classInput-members.html  (+54 more)
docs/html/search/: all_1.js  all_10.js  all_2.js  all_4.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_a.js  classes_b.js  functions_1.js  functions_7.js  functions_8.js  functions_c.js  functions_e.js  functions_f.js  variables_0.js
docs/search/: all_0.js  all_11.js  all_3.js  all_5.js  all_6.js  all_a.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_c.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  searchdata.js
editor_resources/: editor.config
editor_resources/editor_layouts/: imgui.ini
src/FirstParty/: ActorDB.h  ActorManager.h  AudioDB.h  AudioManager.h  Collision.h  CollisionDetector.h  Component.h  ComponentDB.h  ComponentManager.h  EditorManager.h  EditorStyle.h  Engine.h  EngineUtils.h  FileUtils.h  GUIRenderer.h  ImageDB.h  InputManager.h  KeycodeDB.h  LuaAPI.h  LuaComponent.h  ParticleSystem.h  PhysicsWorld.h  RenderRequests.h  Renderer.h  Rigidbody.h  SceneDB.h  SceneManager.h  SpriteRenderer.h  TemplateDB.h  TextDB.h  dconfig
src/FirstParty/src/: ActorManager.cpp  AudioManager.cpp  CollisionDetector.cpp  ComponentManager.cpp  Databases.cpp  EditorManager.cpp  EditorStyle.cpp  Engine.cpp  EngineUtils.cpp  GUIRenderer.cpp  InputManager.cpp  LuaAPI.cpp  LuaComponent.cpp  ParticleSystem.cpp  Renderer.cpp  Rigidbody.cpp  SceneManager.cpp  SpriteRenderer.cpp  main.cpp
wolverine_engine.xcodeproj/: project.pbxproj
wolverine_engine.xcodeproj/xcshareddata/xcschemes/: wolverine_engine.xcscheme
